[project]
name = "seattle-traffic-backend"
version = "0.1.0"
description = "FastAPI MVT tile service for Seattle traffic"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "psycopg[binary]==3.2.3",
    "geopandas==1.0.1",
    "pyogrio==0.10.0",
]

[tool.uv]
package = false
